--- a/package.json
+++ b/package.json
@@ -1,43 +1,39 @@
 {
-  "name": "sergeyevs",
-  "version": "1.0.0",
-  "description": "",
+  "name": "effetex",
+  "version": "0.0.1",
+  "description": "clear",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --config webpack.config.js --mode development",
+    "build": "webpack --config webpack.config.js --mode production",
+    "watch": "webpack --config webpack.config.js --mode development --watch"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dean992008/wordpress-clear-theme.git"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "awesome-typescript-loader": "^3.2.3",
-    "browser-sync": "^2.18.13",
-    "change-case": "^3.0.1",
-    "eslint": "^4.6.1",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-csso": "^3.0.0",
-    "gulp-flatten": "^0.3.1",
-    "gulp-fontello-import": "0.0.1",
-    "gulp-fontmin": "^0.7.3",
-    "gulp-main-bower-files": "^1.3.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.1",
-    "gulp-strip-comments": "^2.5.1",
-    "gulp-strip-debug": "^1.1.0",
-    "gulp-stylelint": "^5.0.0",
-    "gulp-tinypng-compress": "^1.2.1",
-    "gulp-typescript": "^3.2.2",
-    "gulp-uglify": "^3.0.0",
-    "gulp-wp-pot": "^2.0.6",
-    "gulp-wpmanifest": "^0.1.1",
-    "gulp-wpstylecss": "0.0.1",
-    "typescript": "^2.5.2",
-    "webpack": "^3.5.5",
-    "webpack-stream": "^4.0.0",
-    "yargs": "^8.0.2"
+  "bugs": {
+    "url": "https://github.com/dean992008/wordpress-clear-theme/issues"
   },
-  "dependencies": {
-    "inputmask": "^3.3.8"
-  }
+  "homepage": "https://github.com/dean992008/wordpress-clear-theme#readme",
+  "devDependencies": {
+    "awesome-typescript-loader": "^4.0.1",
+    "browser-sync": "^2.23.6",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "css-loader": "^0.28.11",
+    "csso-webpack-plugin": "^1.0.0-beta.10",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "node-sass": "^4.8.3",
+    "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "typescript": "^2.8.1",
+    "uglifyjs-webpack-plugin2": "^1.0.3",
+    "webpack": "^4.3.0",
+    "webpack-cli": "^2.0.13"
+  },
+  "dependencies": {}
 }
